# sjsuCuDNN

./: CMakeLists.txt  README.md  conanfile.py
etc/: build.sh
include/sjsuCuDNN/: linear.cuh  linearKernel.cuh  policyNetwork.cuh  relu.h  reluKernel.cuh  sgdOptimizer.cuh  sgdUpdateKernel.cuh  softmax.cuh  softmaxKernel.cuh
include/sjsuCuRL/: computeExpectedReturn.cuh  computeGradientsKernel.cuh  computeLoss.cuh  computeLossKernel.cuh  multinomialKernel.cuh
src/: linear.cu  linearKernel.cu  policyNetwork.cu  relu.cu  reluKernel.cu  sgdOptimizer.cu  sgdUpdateKernel.cu  softmax.cu  softmaxKernel.cu
src/sjsuCuRL/: computeExpectedReturn.cu  computeGradientsKernel.cu  computeLoss.cu  computeLossKernel.cu  multinomialKernel.cu
tests/: CMakeLists.txt  testLinear.cpp  testPolicyNetwork.cpp  testRelu.cpp  testReluKernel.cu  testSoftmax.cpp
tests/sjsuCuRL/: testComputeLoss.cpp  testMultinomialKernel.cu
